--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1>Yinyou PomodoroClock</h1>
+        <div id="array"></div>
         <button id="button">test</button>
         <div class="clock">
             <h2 id="show-title">Session</h2>
