add clock picture

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Yinyou PomodoroClock</h1>
+        <h1>Notion PomodoroClock</h1>
         <div id="array"></div>
+        <button id="clear-tomatoes">清空所有番茄</button>
         <div class="clock">
             <h2 id="show-title">Session</h2>
             <h2 id="show-time">25:00</h2>
